cabal-version:      2.4
name:               hypst
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Falk Zwimpfer
maintainer:         falk.zwimpfer@axalon.ch

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hypst
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Render, DSL, Utils, Hypst, Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, text ^>=1.2.5.0, pandoc ^>=3.1.2, bytestring ^>= 0.11.4.0, pandoc-types ^>= 1.23
    hs-source-dirs:   app
    default-language: Haskell2010
